--- a/back-end/front-end/src/components/layout/BottomNavBar/BottomNavBar.css
+++ b/back-end/front-end/src/components/layout/BottomNavBar/BottomNavBar.css
@@ -1,12 +1,13 @@
 .bottom-nav {
   position: fixed;
   bottom: 0;
-  left: 0;
-  right: 0;
-  height: var(--bottom-nav-height);
+  max-width: 480px;
+  width: 100%;
+  margin: 0 auto;
+  height: 60px;
   background-color: var(--white);
-  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
+  box-shadow: 0 -2px 3px rgba(0, 0, 0, 0.02);
+  z-index: 8;
 }
 
 .bottom-nav-content {
