--- a/back-end/front-end/src/pages/Tarot/TarotList.css
+++ b/back-end/front-end/src/pages/Tarot/TarotList.css
@@ -11,28 +11,24 @@
 
 .tarot-list-container .tarot-products {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-  gap: var(--spacing-md);
+  gap: 10%;
 }
 
 .tarot-list-container .tarot-product-card {
   background-color: var(--white);
-  border-radius: var(--border-radius-md);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   cursor: pointer;
   transition: transform 0.2s;
-}
-
-.tarot-list-container .tarot-product-card:hover {
-  transform: translateY(-4px);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
 }
 
 .tarot-list-container .product-image {
-  width: 100%;
-  height: 200px;
+  height: 250px;
   overflow: hidden;
-  background-color: var(--gray-light);
+  background-color: #b9b9b9;
+  border-radius: 15px;
 }
 
 .tarot-list-container .product-image img {
@@ -52,7 +48,7 @@
 }
 
 .tarot-list-container .product-info {
-  padding: 5%;
+  padding: 5% 2%;
 }
 
 .tarot-list-container .product-info h2 {
